[package]
name = "hls-vod-lib"
version = "0.1.0"
edition = "2021"
description = "Core HLS VOD library for media parsing, segment generation, and transcoding"
license = "MIT"

[features]
default = ["compat-ffmpeg7"]
compat-ffmpeg7 = []

[dependencies]
bytes = "1.11"
chrono = "0.4"
crossbeam-channel = "0.5.15"
dashmap = "5.5"
ffmpeg-next = "8.0"
num_cpus = "1.17.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.50", features = ["sync"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "fast-rng"] }

[dev-dependencies]
tempfile = "3.9"
