[package]
name = "hls-vod-server"
version = "0.1.0"
edition = "2021"
description = "HLS streaming server with fMP4/CMAF segments, audio transcoding, and WebVTT subtitle conversion"
license = "MIT"

[dependencies]
hls-vod-lib = { path = "../hls-vod-lib" }

# Async runtime and HTTP server
tokio = { version = "1.50", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Concurrency and caching
dashmap = "5.5"
lru = "0.12"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
thiserror = "1.0"
bytes = "1.11"
chrono = "0.4"
regex = "1.12"

# Configuration (for Milestone 10)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.9"
