[package]
name = "jellyfin-transmux-proxy"
version = "0.1.0"
edition = "2021"
description = "HLS transmuxing proxy for Jellyfin media server"
license = "MIT"

[dependencies]
hls-vod-lib = { path = "../hls-vod-lib" }

# Async runtime and HTTP server
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.8.8", features = ["macros", "ws"] }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", features = ["ring"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
bytes = "1.11"
urlencoding = "2.1"

# Configuration.
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
url = "2.5.8"
serde_urlencoded = "0.7.1"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
